@@ -59,9 +59,7 @@ This Work includes contributions authored by David E. Jones, not as a
                 <header-field title="Max" show-order-by="true"/>
                 <default-field><display also-hidden="false"/></default-field>
             </field>
-            <field name="submit">
-                <header-field title="Find"><submit/></header-field>
-            </field>
+            <field name="find"><header-field title="Find"><submit/></header-field></field>
         </form-list>
     </widgets>
 </screen>
