@@ -1,0 +1,75 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+This Work is in the public domain and is provided on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied,
+including, without limitation, any warranties or conditions of TITLE,
+NON-INFRINGEMENT, MERCHANTABILITY, or FITNESS FOR A PARTICULAR PURPOSE.
+You are solely responsible for determining the appropriateness of using
+this Work and assume any risks associated with your use of this Work.
+
+This Work includes contributions authored by David E. Jones, not as a
+"work for hire", who hereby disclaims any copyright to the same.
+-->
+<screen xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="http://moqui.org/xsd/xml-screen-1.0.xsd"
+        default-menu-title="Messages" default-menu-index="1">
+
+    <transition name="createLocalizedMessage">
+        <service name="create#LocalizedMessage"/>
+        <default-response url="."/>
+    </transition>
+    <transition name="updateLocalizedMessage">
+        <service name="update#LocalizedMessage"/>
+        <default-response url="."/>
+    </transition>
+    <transition name="deleteLocalizedMessage">
+        <service name="delete#LocalizedMessage"/>
+        <default-response url="."/>
+    </transition>
+
+    <actions>
+        <entity-find entity-name="LocalizedMessage" list="localizedMessageList" offset="0" limit="50">
+            <search-form-inputs default-order-by="original,locale"/>
+        </entity-find>
+    </actions>
+    <widgets>
+        <container>
+            <container-dialog id="CreateMessageDialog" button-text="New Message">
+                <form-single name="CreateLocalizedMessage" transition="createLocalizedMessage">
+                    <field name="original">
+                        <default-field><text-line size="15"/></default-field>
+                    </field>
+                    <field name="locale">
+                        <default-field><text-line size="5"/></default-field>
+                    </field>
+                    <field name="localized">
+                        <default-field><text-area rows="5" cols="60"/></default-field>
+                    </field>
+                    <field name="submit"><default-field title="Create"><submit/></default-field></field>
+                </form-single>
+            </container-dialog>
+        </container>
+        <form-list name="UpdateLocalizedMessages" list="localizedMessageList" transition="updateLocalizedMessage">
+            <field name="original">
+                <header-field show-order-by="true"><text-find hide-options="true" size="15"/></header-field>
+                <default-field><display/></default-field>
+            </field>
+            <field name="locale">
+                <header-field show-order-by="true"><text-find hide-options="true" size="5"/></header-field>
+                <default-field><display/></default-field>
+            </field>
+            <field name="localized">
+                <default-field><text-area rows="2" cols="60"/></default-field>
+            </field>
+            <field name="submit">
+                <header-field title="Find"><submit/></header-field>
+                <default-field><submit/></default-field>
+            </field>
+            <field name="delete">
+                <default-field>
+                    <link text="Delete" url="deleteLocalizedMessage"><parameter name="original"/><parameter name="locale"/></link>
+                </default-field>
+            </field>
+        </form-list>
+    </widgets>
+</screen>
